force-app/main/default/objects/JT_RunAsTest_Execution__c/JT_RunAsTest_Execution__c.object-meta.xml
<CustomObject>
    <description
  >Stores execution state and results for Run As User test executions. Replaces Platform Cache to avoid TTL expiration issues.</description>
    <label>Run As Test Execution</label>
    <nameField>
        <displayFormat>RTE-{00000}</displayFormat>
        <label>Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Run As Test Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>