force-app/main/default/objects/JT_RunAsTest_Execution__c/fields/Apex_Queueable_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Apex_Queueable_Job_Id__c</fullName>
    <description>Job ID of the Queueable that enqueued the test execution via Tooling API</description>
    <label>Apex Queueable Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>