force-app/main/default/objects/JT_RunAsTest_Execution__c/fields/Apex_Test_Queue_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Apex_Test_Queue_Item_Id__c</fullName>
    <description>ID of the ApexTestQueueItem that was enqueued for this execution</description>
    <externalId>true</externalId>
    <label>Apex Test Queue Item ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>