force-app/main/default/objects/JT_RunAsTest_Execution__c/fields/Bindings_Json__c.field-meta.xml
<CustomField>
    <fullName>Bindings_Json__c</fullName>
    <label>Bindings JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>