force-app/main/default/objects/JT_RunAsTest_Execution__c/fields/Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Name__c</fullName>
    <label>Config Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>