force-app/main/default/objects/JT_RunAsTest_Execution__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <description
  >User ID of the admin who initiated this test execution</description>
    <label>Initiated By</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>