force-app/main/default/objects/JT_RunAsTest_Execution__c/fields/Log_Messages__c.field-meta.xml
<CustomField>
    <fullName>Log_Messages__c</fullName>
    <description>Diagnostic log messages from test execution</description>
    <label>Log Messages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>