force-app/main/default/objects/JT_RunAsTest_Execution__c/fields/Persona_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Persona_Developer_Name__c</fullName>
    <description
  >DeveloperName of the JT_PersonaConfig__mdt record used for this execution. Populated only when running in Persona mode. When set, JT_GenericRunAsTest/JT_GenericPersonaTest create a synthetic user instead of using User_To_Impersonate__c.</description>
    <label>Persona Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>