force-app/main/default/objects/JT_RunAsTest_Execution__c/fields/Results_Json__c.field-meta.xml
<CustomField>
    <fullName>Results_Json__c</fullName>
    <label>Results JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>