force-app/main/default/objects/JT_RunAsTest_Execution__c/fields/Run_As_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Run_As_User_Name__c</fullName>
    <label>Run As User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>