force-app/main/default/objects/JT_RunAsTest_Execution__c/fields/User_To_Impersonate__c.field-meta.xml
<CustomField>
    <fullName>User_To_Impersonate__c</fullName>
    <description>User ID to impersonate in System.runAs()</description>
    <label>User To Impersonate</label>
    <length>18</length>
    <type>Text</type>
</CustomField>